A3/group7/y.output
Grammar

    0 $accept: program $end

    1 program: global_decl_statement_list func_def
    2        | func_def

    3 global_decl_statement_list: global_decl_statement_list func_decl
    4                           | global_decl_statement_list var_decl_stmt
    5                           | var_decl_stmt
    6                           | func_decl

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON

    9 func_header: named_type var_decl_item

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11         | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

   12 formal_param_list: formal_param_list COMMA formal_param
   13                  | formal_param

   14 formal_param: param_type var_decl_item

   15 param_type: INTEGER
   16           | FLOAT
   17           | BOOL
   18           | STRING

   19 optional_local_var_decl_stmt_list: %empty
   20                                  | var_decl_stmt_list

   21 var_decl_stmt_list: var_decl_stmt
   22                   | var_decl_stmt_list var_decl_stmt

   23 var_decl_stmt: named_type var_decl_item_list SEMICOLON

   24 var_decl_item_list: var_decl_item_list COMMA var_decl_item
   25                   | var_decl_item

   26 var_decl_item: NAME

   27 named_type: INTEGER
   28           | FLOAT
   29           | VOID
   30           | BOOL
   31           | STRING

   32 statement_list: statement_list statement
   33               | %empty

   34 statement: assignment_statement
   35          | print_statement
   36          | read_statement

   37 assignment_statement: variable_as_operand ASSIGN_OP expression SEMICOLON

   38 variable_as_operand: variable_name

   39 variable_name: NAME

   40 print_statement: WRITE expression SEMICOLON

   41 read_statement: READ variable_name SEMICOLON

   42 expression: expression PLUS expression
   43           | expression MINUS expression
   44           | expression MULT expression
   45           | expression DIV expression
   46           | MINUS expression
   47           | LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET
   48           | expression QUESTION_MARK expression COLON expression
   49           | expression AND expression
   50           | expression OR expression
   51           | NOT expression
   52           | rel_expression
   53           | variable_as_operand
   54           | constant_as_operand

   55 rel_expression: expression LT expression
   56               | expression LE expression
   57               | expression GT expression
   58               | expression GE expression
   59               | expression NE expression
   60               | expression EQ expression

   61 constant_as_operand: INT_NUM
   62                    | FLOAT_NUM
   63                    | STR_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 15 27
VOID (259) 29
FLOAT (260) 16 28
STRING (261) 18 31
BOOL (262) 17 30
ASSIGN_OP (263) 37
SEMICOLON (264) 7 8 23 37 40 41
LEFT_ROUND_BRACKET (265) 7 8 10 11 47
RIGHT_ROUND_BRACKET (266) 7 8 10 11 47
LEFT_CURLY_BRACKET (267) 10 11
RIGHT_CURLY_BRACKET (268) 10 11
COMMA (269) 12 24
WRITE (270) 40
READ (271) 41
PLUS (272) 42
MINUS (273) 43 46
MULT (274) 44
DIV (275) 45
INT_NUM (276) 61
FLOAT_NUM (277) 62
NAME (278) 26 39
STR_CONST (279) 63
QUESTION_MARK (280) 48
COLON (281) 48
AND (282) 49
OR (283) 50
NOT (284) 51
LT (285) 55
LE (286) 56
GT (287) 57
GE (288) 58
NE (289) 59
EQ (290) 60
UMINUS (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1 2, on right: 0
global_decl_statement_list (39)
    on left: 3 4 5 6, on right: 1 3 4
func_decl (40)
    on left: 7 8, on right: 3 6
func_header (41)
    on left: 9, on right: 7 8 10 11
func_def (42)
    on left: 10 11, on right: 1 2
formal_param_list (43)
    on left: 12 13, on right: 7 10 12
formal_param (44)
    on left: 14, on right: 12 13
param_type (45)
    on left: 15 16 17 18, on right: 14
optional_local_var_decl_stmt_list (46)
    on left: 19 20, on right: 10 11
var_decl_stmt_list (47)
    on left: 21 22, on right: 20 22
var_decl_stmt (48)
    on left: 23, on right: 4 5 21 22
var_decl_item_list (49)
    on left: 24 25, on right: 23 24
var_decl_item (50)
    on left: 26, on right: 9 14 24 25
named_type (51)
    on left: 27 28 29 30 31, on right: 9 23
statement_list (52)
    on left: 32 33, on right: 10 11 32
statement (53)
    on left: 34 35 36, on right: 32
assignment_statement (54)
    on left: 37, on right: 34
variable_as_operand (55)
    on left: 38, on right: 37 53
variable_name (56)
    on left: 39, on right: 38 41
print_statement (57)
    on left: 40, on right: 35
read_statement (58)
    on left: 41, on right: 36
expression (59)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54, on right: 37 40
    42 43 44 45 46 47 48 49 50 51 55 56 57 58 59 60
rel_expression (60)
    on left: 55 56 57 58 59 60, on right: 52
constant_as_operand (61)
    on left: 61 62 63, on right: 54


State 0

    0 $accept: . program $end

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    program                     go to state 6
    global_decl_statement_list  go to state 7
    func_decl                   go to state 8
    func_header                 go to state 9
    func_def                    go to state 10
    var_decl_stmt               go to state 11
    named_type                  go to state 12


State 1

   27 named_type: INTEGER .

    $default  reduce using rule 27 (named_type)


State 2

   29 named_type: VOID .

    $default  reduce using rule 29 (named_type)


State 3

   28 named_type: FLOAT .

    $default  reduce using rule 28 (named_type)


State 4

   31 named_type: STRING .

    $default  reduce using rule 31 (named_type)


State 5

   30 named_type: BOOL .

    $default  reduce using rule 30 (named_type)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 13


State 7

    1 program: global_decl_statement_list . func_def
    3 global_decl_statement_list: global_decl_statement_list . func_decl
    4                           | global_decl_statement_list . var_decl_stmt

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    func_decl      go to state 14
    func_header    go to state 9
    func_def       go to state 15
    var_decl_stmt  go to state 16
    named_type     go to state 12


State 8

    6 global_decl_statement_list: func_decl .

    $default  reduce using rule 6 (global_decl_statement_list)


State 9

    7 func_decl: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON
   10 func_def: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11         | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 17


State 10

    2 program: func_def .

    $default  reduce using rule 2 (program)


State 11

    5 global_decl_statement_list: var_decl_stmt .

    $default  reduce using rule 5 (global_decl_statement_list)


State 12

    9 func_header: named_type . var_decl_item
   23 var_decl_stmt: named_type . var_decl_item_list SEMICOLON

    NAME  shift, and go to state 18

    var_decl_item_list  go to state 19
    var_decl_item       go to state 20


State 13

    0 $accept: program $end .

    $default  accept


State 14

    3 global_decl_statement_list: global_decl_statement_list func_decl .

    $default  reduce using rule 3 (global_decl_statement_list)


State 15

    1 program: global_decl_statement_list func_def .

    $default  reduce using rule 1 (program)


State 16

    4 global_decl_statement_list: global_decl_statement_list var_decl_stmt .

    $default  reduce using rule 4 (global_decl_statement_list)


State 17

    7 func_decl: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11         | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER              shift, and go to state 21
    FLOAT                shift, and go to state 22
    STRING               shift, and go to state 23
    BOOL                 shift, and go to state 24
    RIGHT_ROUND_BRACKET  shift, and go to state 25

    formal_param_list  go to state 26
    formal_param       go to state 27
    param_type         go to state 28


State 18

   26 var_decl_item: NAME .

    $default  reduce using rule 26 (var_decl_item)


State 19

   23 var_decl_stmt: named_type var_decl_item_list . SEMICOLON
   24 var_decl_item_list: var_decl_item_list . COMMA var_decl_item

    SEMICOLON  shift, and go to state 29
    COMMA      shift, and go to state 30


State 20

    9 func_header: named_type var_decl_item .
   25 var_decl_item_list: var_decl_item .

    LEFT_ROUND_BRACKET  reduce using rule 9 (func_header)
    $default            reduce using rule 25 (var_decl_item_list)


State 21

   15 param_type: INTEGER .

    $default  reduce using rule 15 (param_type)


State 22

   16 param_type: FLOAT .

    $default  reduce using rule 16 (param_type)


State 23

   18 param_type: STRING .

    $default  reduce using rule 18 (param_type)


State 24

   17 param_type: BOOL .

    $default  reduce using rule 17 (param_type)


State 25

    8 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . SEMICOLON
   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    SEMICOLON           shift, and go to state 31
    LEFT_CURLY_BRACKET  shift, and go to state 32


State 26

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   12 formal_param_list: formal_param_list . COMMA formal_param

    RIGHT_ROUND_BRACKET  shift, and go to state 33
    COMMA                shift, and go to state 34


State 27

   13 formal_param_list: formal_param .

    $default  reduce using rule 13 (formal_param_list)


State 28

   14 formal_param: param_type . var_decl_item

    NAME  shift, and go to state 18

    var_decl_item  go to state 35


State 29

   23 var_decl_stmt: named_type var_decl_item_list SEMICOLON .

    $default  reduce using rule 23 (var_decl_stmt)


State 30

   24 var_decl_item_list: var_decl_item_list COMMA . var_decl_item

    NAME  shift, and go to state 18

    var_decl_item  go to state 36


State 31

    8 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON .

    $default  reduce using rule 8 (func_decl)


State 32

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 19 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 37
    var_decl_stmt_list                 go to state 38
    var_decl_stmt                      go to state 39
    named_type                         go to state 40


State 33

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    SEMICOLON           shift, and go to state 41
    LEFT_CURLY_BRACKET  shift, and go to state 42


State 34

   12 formal_param_list: formal_param_list COMMA . formal_param

    INTEGER  shift, and go to state 21
    FLOAT    shift, and go to state 22
    STRING   shift, and go to state 23
    BOOL     shift, and go to state 24

    formal_param  go to state 43
    param_type    go to state 28


State 35

   14 formal_param: param_type var_decl_item .

    $default  reduce using rule 14 (formal_param)


State 36

   24 var_decl_item_list: var_decl_item_list COMMA var_decl_item .

    $default  reduce using rule 24 (var_decl_item_list)


State 37

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 33 (statement_list)

    statement_list  go to state 44


State 38

   20 optional_local_var_decl_stmt_list: var_decl_stmt_list .
   22 var_decl_stmt_list: var_decl_stmt_list . var_decl_stmt

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 20 (optional_local_var_decl_stmt_list)

    var_decl_stmt  go to state 45
    named_type     go to state 40


State 39

   21 var_decl_stmt_list: var_decl_stmt .

    $default  reduce using rule 21 (var_decl_stmt_list)


State 40

   23 var_decl_stmt: named_type . var_decl_item_list SEMICOLON

    NAME  shift, and go to state 18

    var_decl_item_list  go to state 19
    var_decl_item       go to state 46


State 41

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON .

    $default  reduce using rule 7 (func_decl)


State 42

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 19 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 47
    var_decl_stmt_list                 go to state 38
    var_decl_stmt                      go to state 39
    named_type                         go to state 40


State 43

   12 formal_param_list: formal_param_list COMMA formal_param .

    $default  reduce using rule 12 (formal_param_list)


State 44

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list . RIGHT_CURLY_BRACKET
   32 statement_list: statement_list . statement

    RIGHT_CURLY_BRACKET  shift, and go to state 48
    WRITE                shift, and go to state 49
    READ                 shift, and go to state 50
    NAME                 shift, and go to state 51

    statement             go to state 52
    assignment_statement  go to state 53
    variable_as_operand   go to state 54
    variable_name         go to state 55
    print_statement       go to state 56
    read_statement        go to state 57


State 45

   22 var_decl_stmt_list: var_decl_stmt_list var_decl_stmt .

    $default  reduce using rule 22 (var_decl_stmt_list)


State 46

   25 var_decl_item_list: var_decl_item .

    $default  reduce using rule 25 (var_decl_item_list)


State 47

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 33 (statement_list)

    statement_list  go to state 58


State 48

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 11 (func_def)


State 49

   40 print_statement: WRITE . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 66
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 50

   41 read_statement: READ . variable_name SEMICOLON

    NAME  shift, and go to state 51

    variable_name  go to state 69


State 51

   39 variable_name: NAME .

    $default  reduce using rule 39 (variable_name)


State 52

   32 statement_list: statement_list statement .

    $default  reduce using rule 32 (statement_list)


State 53

   34 statement: assignment_statement .

    $default  reduce using rule 34 (statement)


State 54

   37 assignment_statement: variable_as_operand . ASSIGN_OP expression SEMICOLON

    ASSIGN_OP  shift, and go to state 70


State 55

   38 variable_as_operand: variable_name .

    $default  reduce using rule 38 (variable_as_operand)


State 56

   35 statement: print_statement .

    $default  reduce using rule 35 (statement)


State 57

   36 statement: read_statement .

    $default  reduce using rule 36 (statement)


State 58

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list . RIGHT_CURLY_BRACKET
   32 statement_list: statement_list . statement

    RIGHT_CURLY_BRACKET  shift, and go to state 71
    WRITE                shift, and go to state 49
    READ                 shift, and go to state 50
    NAME                 shift, and go to state 51

    statement             go to state 52
    assignment_statement  go to state 53
    variable_as_operand   go to state 54
    variable_name         go to state 55
    print_statement       go to state 56
    read_statement        go to state 57


State 59

   47 expression: LEFT_ROUND_BRACKET . expression RIGHT_ROUND_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 72
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 60

   46 expression: MINUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 73
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 61

   61 constant_as_operand: INT_NUM .

    $default  reduce using rule 61 (constant_as_operand)


State 62

   62 constant_as_operand: FLOAT_NUM .

    $default  reduce using rule 62 (constant_as_operand)


State 63

   63 constant_as_operand: STR_CONST .

    $default  reduce using rule 63 (constant_as_operand)


State 64

   51 expression: NOT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 74
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 65

   53 expression: variable_as_operand .

    $default  reduce using rule 53 (expression)


State 66

   40 print_statement: WRITE expression . SEMICOLON
   42 expression: expression . PLUS expression
   43           | expression . MINUS expression
   44           | expression . MULT expression
   45           | expression . DIV expression
   48           | expression . QUESTION_MARK expression COLON expression
   49           | expression . AND expression
   50           | expression . OR expression
   55 rel_expression: expression . LT expression
   56               | expression . LE expression
   57               | expression . GT expression
   58               | expression . GE expression
   59               | expression . NE expression
   60               | expression . EQ expression

    SEMICOLON      shift, and go to state 75
    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MULT           shift, and go to state 78
    DIV            shift, and go to state 79
    QUESTION_MARK  shift, and go to state 80
    AND            shift, and go to state 81
    OR             shift, and go to state 82
    LT             shift, and go to state 83
    LE             shift, and go to state 84
    GT             shift, and go to state 85
    GE             shift, and go to state 86
    NE             shift, and go to state 87
    EQ             shift, and go to state 88


State 67

   52 expression: rel_expression .

    $default  reduce using rule 52 (expression)


State 68

   54 expression: constant_as_operand .

    $default  reduce using rule 54 (expression)


State 69

   41 read_statement: READ variable_name . SEMICOLON

    SEMICOLON  shift, and go to state 89


State 70

   37 assignment_statement: variable_as_operand ASSIGN_OP . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 90
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 71

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 10 (func_def)


State 72

   42 expression: expression . PLUS expression
   43           | expression . MINUS expression
   44           | expression . MULT expression
   45           | expression . DIV expression
   47           | LEFT_ROUND_BRACKET expression . RIGHT_ROUND_BRACKET
   48           | expression . QUESTION_MARK expression COLON expression
   49           | expression . AND expression
   50           | expression . OR expression
   55 rel_expression: expression . LT expression
   56               | expression . LE expression
   57               | expression . GT expression
   58               | expression . GE expression
   59               | expression . NE expression
   60               | expression . EQ expression

    RIGHT_ROUND_BRACKET  shift, and go to state 91
    PLUS                 shift, and go to state 76
    MINUS                shift, and go to state 77
    MULT                 shift, and go to state 78
    DIV                  shift, and go to state 79
    QUESTION_MARK        shift, and go to state 80
    AND                  shift, and go to state 81
    OR                   shift, and go to state 82
    LT                   shift, and go to state 83
    LE                   shift, and go to state 84
    GT                   shift, and go to state 85
    GE                   shift, and go to state 86
    NE                   shift, and go to state 87
    EQ                   shift, and go to state 88


State 73

   42 expression: expression . PLUS expression
   43           | expression . MINUS expression
   44           | expression . MULT expression
   45           | expression . DIV expression
   46           | MINUS expression .
   48           | expression . QUESTION_MARK expression COLON expression
   49           | expression . AND expression
   50           | expression . OR expression
   55 rel_expression: expression . LT expression
   56               | expression . LE expression
   57               | expression . GT expression
   58               | expression . GE expression
   59               | expression . NE expression
   60               | expression . EQ expression

    $default  reduce using rule 46 (expression)


State 74

   42 expression: expression . PLUS expression
   43           | expression . MINUS expression
   44           | expression . MULT expression
   45           | expression . DIV expression
   48           | expression . QUESTION_MARK expression COLON expression
   49           | expression . AND expression
   50           | expression . OR expression
   51           | NOT expression .
   55 rel_expression: expression . LT expression
   56               | expression . LE expression
   57               | expression . GT expression
   58               | expression . GE expression
   59               | expression . NE expression
   60               | expression . EQ expression

    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77
    MULT   shift, and go to state 78
    DIV    shift, and go to state 79
    LT     shift, and go to state 83
    LE     shift, and go to state 84
    GT     shift, and go to state 85
    GE     shift, and go to state 86
    NE     shift, and go to state 87
    EQ     shift, and go to state 88

    $default  reduce using rule 51 (expression)


State 75

   40 print_statement: WRITE expression SEMICOLON .

    $default  reduce using rule 40 (print_statement)


State 76

   42 expression: expression PLUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 92
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 77

   43 expression: expression MINUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 93
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 78

   44 expression: expression MULT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 94
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 79

   45 expression: expression DIV . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 95
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 80

   48 expression: expression QUESTION_MARK . expression COLON expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 96
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 81

   49 expression: expression AND . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 97
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 82

   50 expression: expression OR . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 98
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 83

   55 rel_expression: expression LT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 99
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 84

   56 rel_expression: expression LE . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 100
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 85

   57 rel_expression: expression GT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 101
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 86

   58 rel_expression: expression GE . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 102
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 87

   59 rel_expression: expression NE . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 103
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 88

   60 rel_expression: expression EQ . expression

    LEFT_ROUND_BRACKET  shift, and go to state 59
    MINUS               shift, and go to state 60
    INT_NUM             shift, and go to state 61
    FLOAT_NUM           shift, and go to state 62
    NAME                shift, and go to state 51
    STR_CONST           shift, and go to state 63
    NOT                 shift, and go to state 64

    variable_as_operand  go to state 65
    variable_name        go to state 55
    expression           go to state 104
    rel_expression       go to state 67
    constant_as_operand  go to state 68


State 89

   41 read_statement: READ variable_name SEMICOLON .

    $default  reduce using rule 41 (read_statement)


State 90

   37 assignment_statement: variable_as_operand ASSIGN_OP expression . SEMICOLON
   42 expression: expression . PLUS expression
   43           | expression . MINUS expression
   44           | expression . MULT expression
   45           | expression . DIV expression
   48           | expression . QUESTION_MARK expression COLON expression
   49           | expression . AND expression
   50           | expression . OR expression
   55 rel_expression: expression . LT expression
   56               | expression . LE expression
   57               | expression . GT expression
   58               | expression . GE expression
   59               | expression . NE expression
   60               | expression . EQ expression

    SEMICOLON      shift, and go to state 105
    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MULT           shift, and go to state 78
    DIV            shift, and go to state 79
    QUESTION_MARK  shift, and go to state 80
    AND            shift, and go to state 81
    OR             shift, and go to state 82
    LT             shift, and go to state 83
    LE             shift, and go to state 84
    GT             shift, and go to state 85
    GE             shift, and go to state 86
    NE             shift, and go to state 87
    EQ             shift, and go to state 88


State 91

   47 expression: LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET .

    $default  reduce using rule 47 (expression)


State 92

   42 expression: expression . PLUS expression
   42           | expression PLUS expression .
   43           | expression . MINUS expression
   44           | expression . MULT expression
   45           | expression . DIV expression
   48           | expression . QUESTION_MARK expression COLON expression
   49           | expression . AND expression
   50           | expression . OR expression
   55 rel_expression: expression . LT expression
   56               | expression . LE expression
   57               | expression . GT expression
   58               | expression . GE expression
   59               | expression . NE expression
   60               | expression . EQ expression

    MULT  shift, and go to state 78
    DIV   shift, and go to state 79
